fixes style & adds precommit rules

--- a/cents-of-unity/package.json
+++ b/cents-of-unity/package.json
@@ -65,6 +65,8 @@
     }
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.js": "eslint --cache --fix",
+    "*.ts": "eslint --cache --fix",
+    "*.tsx": "eslint --cache --fix"
   }
 }
