--- a/cents-of-unity/package.json
+++ b/cents-of-unity/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.1.5",
     "antd": "^4.6.2",
     "axios": "^0.20.0",
+    "firebase": "^7.19.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-editext": "^3.17.0",
