--- a/cents-of-unity/package.json
+++ b/cents-of-unity/package.json
@@ -10,6 +10,7 @@
     "@typescript-eslint/parser": "^4.2.0",
     "eslint-plugin-prettier": "^3.1.4",
     "firebase": "^7.21.1",
+    "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
