--- a/cents-of-unity/package.json
+++ b/cents-of-unity/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
@@ -10,11 +11,11 @@
     "@typescript-eslint/parser": "^4.2.0",
     "eslint-plugin-prettier": "^3.1.4",
     "firebase": "^7.21.1",
-    "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "styled-components": "^5.2.0",
     "typescript": "^4.0.3"
   },
   "scripts": {
