--- a/cents-of-unity/package.json
+++ b/cents-of-unity/package.json
@@ -16,7 +16,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "styled-components": "^5.2.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
