--- a/cents-of-unity/package.json
+++ b/cents-of-unity/package.json
@@ -7,14 +7,14 @@
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
     "eslint-plugin-prettier": "^3.1.4",
     "firebase": "^7.21.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "prettier": "^2.1.2",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "react-is": "^17.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^3.4.4",
     "styled-components": "^5.2.0",
     "typescript": "^4.0.3",
     "uuid": "^8.3.1"
@@ -25,6 +25,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .tsx"
+  },
+  "resolutions": {
+    "**/@typescript-eslint/eslint-plugin": "^4.5.0",
+    "**/@typescript-eslint/parser": "^4.5.0"
   },
   "browserslist": {
     "production": [
