--- a/cents-of-unity/package.json
+++ b/cents-of-unity/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@ckeditor/ckeditor5-build-balloon-block": "^23.1.0",
+    "@ckeditor/ckeditor5-react": "^3.0.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
